# Sibna_v8-protocol

./: README.md
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/: AUDIT_SUMMARY.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXECUTIVE_SUMMARY.md  LICENSE  ROADMAP.md  SECURITY.md  build.sh  docker-compose.yml
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/core/: Cargo.toml  build.rs  cbindgen.toml
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/core/benches/: sibna_bench.rs
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/core/fuzz/: Cargo.toml
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/core/fuzz/fuzz_targets/: fuzz_chain.rs  fuzz_decrypt.rs  fuzz_ffi.rs  fuzz_group.rs  fuzz_handshake.rs  fuzz_session.rs
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/core/src/: error.rs  lib.rs  rate_limit.rs  safety.rs  validation.rs  wasm.rs
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/core/src/crypto/: encryptor.rs  kdf.rs  mod.rs  random.rs
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/core/src/ffi/: context.rs  crypto.rs  mod.rs  session.rs
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/core/src/group/: mod.rs
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/core/src/handshake/: builder.rs  mod.rs
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/core/src/keystore/: mod.rs  store.rs
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/core/src/ratchet/: chain.rs  mod.rs  session.rs  state.rs
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/docs/: API_REFERENCE.md  PROTOCOL_DOCUMENTATION.md  SIGNAL_COMPARISON.md  THREAT_MODEL.md  VULNERABILITIES_FIXED.md
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/docs/protocol/: security.md  specs.md
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/examples/: full_session_walkthrough.py  hello_world.rs
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/include/: sibna.h
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/mobile/: README.md
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/mobile/android/: README.md
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/mobile/android/src/main/kotlin/sibna/: Sibna.kt
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/mobile/ios/: README.md  Sibna.swift
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/sdks/cpp/: CMakeLists.txt
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/sdks/cpp/include/: sibna.hpp
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/sdks/cpp/src/: sibna_impl.cpp
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/sdks/dart/: README.md  pubspec.yaml
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/sdks/dart/lib/: sibna.dart
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/sdks/javascript/: README.md  package.json
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/sdks/javascript/src/: index.ts
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/sdks/python/: __init__.py  client.py
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/sdks/python/core/: exceptions.py
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/server/: Dockerfile  main.py
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/tests/: integration_test.py  integration_test.rs
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/wasm/: package.json
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/web-client/: README.md  index.html  package.json  vite.config.ts
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/web-client/src/: App.css  App.tsx  index.css
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/web-client/src/components/: ChatWindow.tsx  GroupPanel.tsx  IdentityPanel.tsx
sibna-protocol-v7-complete/sibna-protocol-v7-fixed/web-client/src/utils/: sibna.ts
