[package]
name = "sibna"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[lib]
name = "sibna"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
ffi = []
python = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook"]

[dependencies]
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
blake3.workspace = true
rand_core.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true
bytes.workspace = true
parking_lot.workspace = true
libc.workspace = true

arrayvec = "0.7"
once_cell = "1.18"
num-derive = "0.4"
num-traits = "0.2"
sled = "0.34"
hex = "0.4"

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[build-dependencies]
cbindgen = { workspace = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
tempfile = "3.8"

[[bench]]
name = "sibna_bench"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
